[package]
name = "nanocl-get-started"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nanocl-get-started"
test = true
bench = false
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
# opt-level = "s"
# lto = true
# codegen-units = 1

[dependencies]
ntex = { version = "0.7.11", features = ["tokio"] }
serde = { version = "1.0.192", features = ["derive"] }
